--- a/res/values-ast-rES/strings.xml
+++ b/res/values-ast-rES/strings.xml
@@ -1325,8 +1325,8 @@ Teníemos un Palaciu…\n
     <string name="reset_network_complete_toast">Reafitáronse los axustes de rede</string>
     <string name="device_reset_title">Reafitar preséu</string>
     <string name="master_clear_title">Reafitar datos de fábrica</string>
-    <string name="master_clear_desc" product="tablet">Van desaniciase tolos datos del <b>almacenamientu internu</b> de la table\u2019t, como:\n\n<li>La to cuenta de Google</li>\n<li>Los axustes y los datos d\'aplicaciones y del sistema </li>\n<li>Les aplicaciones descargaes</li></string>
-    <string name="master_clear_desc" product="default">Van desaniciase tolos datos del <b>almacenamientu internu</b> del teléfon\u2019u, como:\n\n<li>La to cuenta de Google</li>\n<li>Los axustes y los datos d\'aplicaciones y del sistema </li>\n<li>Les aplicaciones descargaes</li></string>
+    <string name="master_clear_desc" product="tablet">Van desaniciase tolos datos del <b>almacenamientu internu</b> de la table\u2019t, como:\n\n<li>La to cuenta de /e/</li>\n<li>Los axustes y los datos d\'aplicaciones y del sistema </li>\n<li>Les aplicaciones descargaes</li></string>
+    <string name="master_clear_desc" product="default">Van desaniciase tolos datos del <b>almacenamientu internu</b> del teléfon\u2019u, como:\n\n<li>La to cuenta de /e/</li>\n<li>Los axustes y los datos d\'aplicaciones y del sistema </li>\n<li>Les aplicaciones descargaes</li></string>
     <string name="master_clear_accounts" product="default">\n\nAnguaño aniciesti sesión nes cuentes de darréu:\n</string>
     <string name="master_clear_other_users_present" product="default">\n\nHai otros usuarios presentes nesti preséu.\n</string>
     <string name="master_clear_desc_also_erases_external"><li>Música</li>\n<li>Semeyes</li>\n<li>Otros datos d\'usuariu</li></string>
