--- a/res/values-az-rAZ/strings.xml
+++ b/res/values-az-rAZ/strings.xml
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Şəbəkə ayarları sıfırlandı"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Cihazı sıfırlayın"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Data zavod sıfırlaması"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Bu, planşetinizdən bunları siləcək: "<b>"daxili yaddaş"</b>", həmçinin:\n\n"<li>"Google hesabınızı"</li>\n<li>"Sistem və tətbiq data və ayarlarını"</li>\n<li>"Endirilmiş tətbiqləri"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Bu telefonunuzun "<b>"daxili yaddaşından"</b>" bütün datanı siləcək, bura daxildir: \n\n"<li>"Google hesabınız"</li>\n<li>"Sistem və tətbiq məlumatları və parametrləri"</li>\n<li>"Endirilmiş tətbiqlər"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Bu, planşetinizdən bunları siləcək: "<b>"daxili yaddaş"</b>", həmçinin:\n\n"<li>"/e/ hesabınızı"</li>\n<li>"Sistem və tətbiq data və ayarlarını"</li>\n<li>"Endirilmiş tətbiqləri"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Bu telefonunuzun "<b>"daxili yaddaşından"</b>" bütün datanı siləcək, bura daxildir: \n\n"<li>"/e/ hesabınız"</li>\n<li>"Sistem və tətbiq məlumatları və parametrləri"</li>\n<li>"Endirilmiş tətbiqlər"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Hazırda bu hesablara daxil olmusunuz:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Bu cihazda başqa istifadəçilər iştirak edir.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Musiqi"</li>\n<li>"Fotolar"</li>\n<li>"Digər istifadəçi datası"</li></string>
