--- a/res/values-bn-rBD/strings.xml
+++ b/res/values-bn-rBD/strings.xml
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"নেটওয়ার্ক সেটিংস পুনরায় সেট করা হয়েছে"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"ডিভাইসটি পুনরায় সেট করুন"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"ফ্যাক্টরি ডেটা পুনরায় সেট করুন"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"এটি আপনার ট্যাবলেটের "<b>"অভ্যন্তরীণ সঞ্চয়স্থান"</b>", থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ:\n\n"<li>"আপনার Google অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশান ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশানগুলি"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"এটি আপনার ফোনের "<b>"অভ্যন্তরীণ সঞ্চয়স্থান"</b>" থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ: \n\n"<li>"আপনার Google অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশান ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশানগুলি"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"এটি আপনার ট্যাবলেটের "<b>"অভ্যন্তরীণ সঞ্চয়স্থান"</b>", থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ:\n\n"<li>"আপনার /e/ অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশান ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশানগুলি"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"এটি আপনার ফোনের "<b>"অভ্যন্তরীণ সঞ্চয়স্থান"</b>" থেকে সমস্ত ডেটা মুছে দেবে, এগুলি সহ: \n\n"<li>"আপনার /e/ অ্যাকাউন্ট"</li>\n<li>"সিস্টেম এবং অ্যাপ্লিকেশান ডেটা এবং সেটিংস"</li>\n<li>"ডাউনলোড করা অ্যাপ্লিকেশানগুলি"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"আপনি বর্তমানে নিম্নলিখিত অ্যাকাউন্টে প্রবেশ করুন করে আছেন:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"এই ডিভাইসে অন্যান্য ব্যবহারকারীরাও রয়েছেন৷\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"সঙ্গীত"</li>\n<li>"ফটো"</li>\n<li>"অন্যান্য ব্যবহারকারী ডেটা"</li></string>
