--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"नेटवर्क सेटिंग रीसेट कर दी गई हैं"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"डिवाइस रीसेट करें"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"फ़ैक्टरी डेटा रीसेट"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"इससे आपके टेबलेट के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका Google खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"इससे आपके फ़ोन के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका Google खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"इससे आपके टेबलेट के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका /e/ खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"इससे आपके फ़ोन के "<b>"मोबाइल मेमोरी"</b>" से सभी डेटा मिट जाएगा, जिसमें शामिल है:\n\n"<li>"आपका /e/ खाता"</li>\n<li>"सिस्‍टम और ऐप्स डेटा और सेटिंग"</li>\n<li>"डाउनलोड किए गए ऐप्स"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"आप वर्तमान में निम्‍न खातों में प्रवेश हैं:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"इस डिवाइस पर अन्‍य उपयोगकर्ता मौजूद हैं.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"संगीत"</li>\n<li>"फ़ोटो"</li>\n<li>"अन्‍य उपयोगकर्ता डेटा"</li></string>
