--- a/res/values-hy-rAM/strings.xml
+++ b/res/values-hy-rAM/strings.xml
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Ցանցի կարգավորումները վերակայվել են"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Վերակայել սարքը"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Գործարանային տվյալների վերականգնում"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Սա կջնջի բոլոր տվյալները ձեր պլանշետի "<b>" ներքին պահոցից"</b>", այդ թվում՝\n\n"<li>"Ձեր Google հաշիվը"</li>\n<li>"Համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"Ներբեռնված հավելվածները"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Սա կջնջի բոլոր տվյալները ձեր սարքի "<b>"ներքին պահոցից"</b>", ներառյալ`\n\n"<li>"Ձեր Google հաշիվը"</li>\n<li>"Համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"Ներբեռնված ծրագրերը"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Սա կջնջի բոլոր տվյալները ձեր պլանշետի "<b>" ներքին պահոցից"</b>", այդ թվում՝\n\n"<li>"Ձեր /e/ հաշիվը"</li>\n<li>"Համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"Ներբեռնված հավելվածները"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Սա կջնջի բոլոր տվյալները ձեր սարքի "<b>"ներքին պահոցից"</b>", ներառյալ`\n\n"<li>"Ձեր /e/ հաշիվը"</li>\n<li>"Համակարգի և հավելվածների տվյալներն ու կարգավորումները"</li>\n<li>"Ներբեռնված ծրագրերը"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Դուք այժմ գրանցված եք հետևյալ հաշիվներում՝\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Այս սարքում այլ օգտատերերի հաշիվներ կան:\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Երաժշտություն"</li>\n<li>"Լուսանկարներ"</li>\n<li>"Օգտվողի այլ տվյալներ"</li></string>
