--- a/res/values-ka-rGE/strings.xml
+++ b/res/values-ka-rGE/strings.xml
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"ქსელის პარამეტრები ჩამოიყარა"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"მოწყობილობის საწყისზე დაბრ."</string>
     <string name="master_clear_title" msgid="5907939616087039756">"ქარხნული მონაცემების აღდგენა"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ეს მოქმედება წაშლის ყველა მონაცემებს თქვენი ტაბლეტის "<b>"შიდა მეხსიერებიდან"</b>", მათ შორის:\n\n"<li>"თქვენს Google-ის ანგარიშს"</li>\n<li>"სისტემისა და აპების მონაცემებს და პარამეტრებს"</li>\n<li>"ჩამოტვირთულ აპებს"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ეს მოქმედება წაშლის ყველა მონაცემებს თქვენი ტელეფონის "<b>"შიდა მეხსიერებიდან"</b>", მათ შორის:\n\n"<li>"თქვენს Google-ის ანგარიშს"</li>\n<li>"სისტემისა და აპების მონაცემებს და პარამეტრებს"</li>\n<li>"ჩამოტვირთულ აპებს"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ეს მოქმედება წაშლის ყველა მონაცემებს თქვენი ტაბლეტის "<b>"შიდა მეხსიერებიდან"</b>", მათ შორის:\n\n"<li>"თქვენს /e/-ის ანგარიშს"</li>\n<li>"სისტემისა და აპების მონაცემებს და პარამეტრებს"</li>\n<li>"ჩამოტვირთულ აპებს"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ეს მოქმედება წაშლის ყველა მონაცემებს თქვენი ტელეფონის "<b>"შიდა მეხსიერებიდან"</b>", მათ შორის:\n\n"<li>"თქვენს /e/-ის ანგარიშს"</li>\n<li>"სისტემისა და აპების მონაცემებს და პარამეტრებს"</li>\n<li>"ჩამოტვირთულ აპებს"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ამჟამად შესული ხართ შემდეგ ანგარიშებში:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n" ამ მოწყობილობაზე წარმოდგენილია სხვა მომხმარებლები. \n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"მუსიკა"</li>\n<li>"ფოტოები"</li>\n<li>"მომხმარებლის სხვა მონაცემები"</li></string>
