--- a/res/values-ky-rKG/strings.xml
+++ b/res/values-ky-rKG/strings.xml
@@ -1238,8 +1238,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Тармак жөндөөлөрү баштапкы абалга келтирилди"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Түзмктү баштпкы абалга келтрүү"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Баштапкы абалга кайтаруу"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Бул, планшетиңиздин "<b>"ички сактагычындагы"</b>" бардык берилиштерди кийинкилер менен кошо өчүрөт:\n\n"<li>"Сиздин Google эсебиңиз"</li>\n<li>"Систем, колдонмолордун берилиштери жана тууралоолору"</li>\n<li>"Жүктөлүп алынган колдонмолор"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Бул, телефонуңуздун "<b>"ички сактагычындагы"</b>" бардык берилиштерди кийинкилер менен кошо өчүрөт:\n\n"<li>"Сиздин Google эсебиңиз"</li>\n<li>"Систем, колдонмолордун берилиштери жана тууралоолору"</li>\n<li>"Жүктөлүп алынган колдонмолор"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Бул, планшетиңиздин "<b>"ички сактагычындагы"</b>" бардык берилиштерди кийинкилер менен кошо өчүрөт:\n\n"<li>"Сиздин /e/ эсебиңиз"</li>\n<li>"Систем, колдонмолордун берилиштери жана тууралоолору"</li>\n<li>"Жүктөлүп алынган колдонмолор"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Бул, телефонуңуздун "<b>"ички сактагычындагы"</b>" бардык берилиштерди кийинкилер менен кошо өчүрөт:\n\n"<li>"Сиздин /e/ эсебиңиз"</li>\n<li>"Систем, колдонмолордун берилиштери жана тууралоолору"</li>\n<li>"Жүктөлүп алынган колдонмолор"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Учурда төмөнкү каттоо эсептерине кирип турасыз:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Бул түзмөктө башка колдонуучулар бар.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Музыка"</li>\n<li>"Сүрөттөр"</li>\n<li>"Башка колдонуучу дайындары"</li></string>
