--- a/res/values-mr-rIN/strings.xml
+++ b/res/values-mr-rIN/strings.xml
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"नेटवर्क सेटिंग्ज रीसेट केल्या गेल्या आहेत"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"डिव्हाइस रीसेट करा"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"फॅक्‍टरी डेटा रीसेट"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"हे आपल्या टॅब्लेटच्या "<b>"अंतर्गत संचयना"</b>" वरील सर्व डेटा मिटवेल,                                                                     यासह:\n\n"<li>"आपले Google खाते"</li>\n<li>"सिस्टम आणि अॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेले अॅप्स"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"हे आपल्या फोनच्या "<b>"अंतर्गत संचयन"</b>" वरील सर्व डेटा मिटवेल, यासह:\n\n"<li>"आपले Google खाते"</li>\n<li>"सिस्टम आणि अॅप डेटा सेटिंग्ज"</li>\n<li>"डाउनलोड केलेले अॅप्स"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"हे आपल्या टॅब्लेटच्या "<b>"अंतर्गत संचयना"</b>" वरील सर्व डेटा मिटवेल,                                                                     यासह:\n\n"<li>"आपले /e/ खाते"</li>\n<li>"सिस्टम आणि अॅप डेटा आणि सेटिंग्ज"</li>\n<li>"डाउनलोड केलेले अॅप्स"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"हे आपल्या फोनच्या "<b>"अंतर्गत संचयन"</b>" वरील सर्व डेटा मिटवेल, यासह:\n\n"<li>"आपले /e/ खाते"</li>\n<li>"सिस्टम आणि अॅप डेटा सेटिंग्ज"</li>\n<li>"डाउनलोड केलेले अॅप्स"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"आपण खालील खात्यांवर सध्या साइन इन केले आहे:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"या डिव्‍हाइसवर इतर वापरकर्ते उपस्‍थित आहेत.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"संगीत"</li>\n<li>"फोटो"</li>\n<li>"अन्य वापरकर्ता डेटा"</li></string>
