--- a/res/values-te-rIN/strings.xml
+++ b/res/values-te-rIN/strings.xml
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"నెట్‌వర్క్ సెట్టింగ్‌లు రీసెట్ చేయబడ్డాయి"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"పరికరాన్ని రీసెట్ చేయి"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"ఫ్యాక్టరీ డేటా రీసెట్ చేయి"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ఇందువలన మీ టాబ్లెట్ యొక్క "<b>"అంతర్గత నిల్వ"</b>" నుండి వీటితో సహా, మొత్తం డేటా ఎరేజ్ చేయబడుతుంది:\n\n"<li>"మీ Google ఖాతా"</li>\n<li>"సిస్టమ్ మరియు అనువర్తన డేటా మరియు సెట్టింగ్‌లు"</li>\n<li>"డౌన్‌లోడ్ చేయబడిన అనువర్తనాలు"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ఇందువలన మీ ఫోన్ "<b>"అంతర్గత నిల్వ"</b>" నుండి వీటితో సహా మొత్తం డేటా ఎరేజ్ చేయబడుతుంది:\n\n"<li>"Google ఖాతా"</li>\n<li>"సిస్టమ్ మరియు అనువర్తన డేటా మరియు సెట్టింగ్‌లు"</li>\n<li>"డౌన్‌లోడ్ చేయబడిన అనువర్తనాలు"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ఇందువలన మీ టాబ్లెట్ యొక్క "<b>"అంతర్గత నిల్వ"</b>" నుండి వీటితో సహా, మొత్తం డేటా ఎరేజ్ చేయబడుతుంది:\n\n"<li>"మీ /e/ ఖాతా"</li>\n<li>"సిస్టమ్ మరియు అనువర్తన డేటా మరియు సెట్టింగ్‌లు"</li>\n<li>"డౌన్‌లోడ్ చేయబడిన అనువర్తనాలు"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ఇందువలన మీ ఫోన్ "<b>"అంతర్గత నిల్వ"</b>" నుండి వీటితో సహా మొత్తం డేటా ఎరేజ్ చేయబడుతుంది:\n\n"<li>"/e/ ఖాతా"</li>\n<li>"సిస్టమ్ మరియు అనువర్తన డేటా మరియు సెట్టింగ్‌లు"</li>\n<li>"డౌన్‌లోడ్ చేయబడిన అనువర్తనాలు"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"మీరు ప్రస్తుతం క్రింది ఖాతాలకు సైన్ ఇన్ చేసారు:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"ఈ పరికరంలో ఇతర వినియోగదారులు ఉన్నారు.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"సంగీతం"</li>\n<li>"ఫోటోలు"</li>\n<li>"ఇతర వినియోగదారు డేటా"</li></string>
