--- a/res/values-be-rBY/strings.xml
+++ b/res/values-be-rBY/strings.xml
@@ -1259,8 +1259,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Налады сеткі былі скінутыя"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Скід налад прылады"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Скід да завадскіх налад"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Гэта дазволіць сцерці ўсе даныя з "<b>"унутранага сховiшча"</b>" вашага планшэта, у тым ліку:\n\n"<li>"Ваш улiковы запiс Google"</li>\n<li>"Сістэмныя даныя і налады, а таксама даныя і налады дадаткаў"</li>\n<li>"Спампаваныя дадаткі"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Гэта дазволіць сцерці ўсе даныя з "<b>"унутранага сховiшча"</b>" вашага тэлефона, у тым ліку:\n\n"<li>"Ваш улiковы запiс Google"</li>\n<li>"Сістэмныя даныя і налады, а таксама даныя і налады дадаткаў"</li>\n<li>"Спампаваныя дадаткі"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Гэта дазволіць сцерці ўсе даныя з "<b>"унутранага сховiшча"</b>" вашага планшэта, у тым ліку:\n\n"<li>"Ваш улiковы запiс /e/"</li>\n<li>"Сістэмныя даныя і налады, а таксама даныя і налады дадаткаў"</li>\n<li>"Спампаваныя дадаткі"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Гэта дазволіць сцерці ўсе даныя з "<b>"унутранага сховiшча"</b>" вашага тэлефона, у тым ліку:\n\n"<li>"Ваш улiковы запiс /e/"</li>\n<li>"Сістэмныя даныя і налады, а таксама даныя і налады дадаткаў"</li>\n<li>"Спампаваныя дадаткі"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"У дадзены момант вы зайшлі ў наступныя ўліковыя запісы:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"На гэтай прыладзе ёсць іншыя карыстальнікі.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Музыка"</li>\n<li>"Фатаграфіі"</li>\n<li>"Іншыя дадзеныя карыстальніка"</li></string>
