--- a/res/values-kk-rKZ/strings.xml
+++ b/res/values-kk-rKZ/strings.xml
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Желі параметрлері қалпына келтірілген"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Құрылғыны ысыру"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Зауыттық деректерді қалпына келтіру"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Бұл сіздің планшетіңіздің "<b>"ішкі жадынан"</b>" барлық дерекқорды өшіреді, келесі деректерді қоса:\n\n"<li>"Google есептік жазбаңыз"</li>\n<li>"Жүйе және қолданба дерекқоры және параметрлері"</li>\n<li>"Жүктелген қолданбалар"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Бұл телефонның "<b>"ішкі жадынан"</b>" барлық деректерді өшіреді:\n\n"<li>" Google есептік жазбаңызды"</li>\n<li>"Жүйе және қолданба дерекқоры мен параметрлерін"</li>\n<li>"Жүктелген қолданбаларды"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Бұл сіздің планшетіңіздің "<b>"ішкі жадынан"</b>" барлық дерекқорды өшіреді, келесі деректерді қоса:\n\n"<li>"/e/ есептік жазбаңыз"</li>\n<li>"Жүйе және қолданба дерекқоры және параметрлері"</li>\n<li>"Жүктелген қолданбалар"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Бұл телефонның "<b>"ішкі жадынан"</b>" барлық деректерді өшіреді:\n\n"<li>" /e/ есептік жазбаңызды"</li>\n<li>"Жүйе және қолданба дерекқоры мен параметрлерін"</li>\n<li>"Жүктелген қолданбаларды"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Сіз келесі есептік жазбаларға кірдіңіз:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Осы құрылғыда басқа пайдаланушылар бар.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Mузыка"</li>\n<li>"Фотосуреттер"</li>\n<li>"Басқа пайдаланушы деректері"</li></string>
