--- a/res/values-kn-rIN/strings.xml
+++ b/res/values-kn-rIN/strings.xml
@@ -1239,8 +1239,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"ನೆಟ್‌ವರ್ಕ್‌ ಸೆಟ್ಟಿಂಗ್‌ ರಿಸೆಟ್‌ ಮಾಡಲಾಗಿದೆ"</string>
     <string name="device_reset_title" msgid="2384019005638768076">"ಸಾಧನವನ್ನು ಮರುಹೊಂದಿಸಿ"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"ಫ್ಯಾಕ್ಟರಿಡೇಟಾ ರಿಸೆಟ್‌"</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ಇದು ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ನ "<b>"ಆಂತರಿಕ ಸಂಗ್ರಹಣೆಯ"</b>" ಎಲ್ಲ ಡೇಟಾವನ್ನು ಅಳಿಸುತ್ತದೆ, ಅವುಗಳೆಂದರೆ:\n\n"<li>"ನಿಮ್ಮ Google ಖಾತೆ"</li>\n<li>"ಸಿಸ್ಟಂ ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾ ಹಾಗೂ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</li>\n<li>"ಡೌನ್‌ಲೋಡ್ ಮಾಡಿರುವ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ಇದು ನಿಮ್ಮ ಫೋನ್‌ನ "<b>"ಆಂತರಿಕ ಸಂಗ್ರಹಣೆಯಲ್ಲಿರುವ"</b>"ಎಲ್ಲ ಡೇಟಾವನ್ನು ಅಳಿಸಿ ಹಾಕುತ್ತದೆ. ಡೇಟಾ ಇವುಗಳನ್ನೂ ಒಳಗೊಂಡಿರಬಹುದು:\n\n"<li>"ನಿಮ್ಮ Google ಖಾತೆ"</li>\n<li>"ಸಿಸ್ಟಂ ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾ ಹಾಗೂ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</li>\n<li>"ಡೌನ್‌ಲೋಡ್ ಮಾಡಲಾದ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"ಇದು ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್‌ನ "<b>"ಆಂತರಿಕ ಸಂಗ್ರಹಣೆಯ"</b>" ಎಲ್ಲ ಡೇಟಾವನ್ನು ಅಳಿಸುತ್ತದೆ, ಅವುಗಳೆಂದರೆ:\n\n"<li>"ನಿಮ್ಮ /e/ ಖಾತೆ"</li>\n<li>"ಸಿಸ್ಟಂ ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾ ಹಾಗೂ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</li>\n<li>"ಡೌನ್‌ಲೋಡ್ ಮಾಡಿರುವ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"ಇದು ನಿಮ್ಮ ಫೋನ್‌ನ "<b>"ಆಂತರಿಕ ಸಂಗ್ರಹಣೆಯಲ್ಲಿರುವ"</b>"ಎಲ್ಲ ಡೇಟಾವನ್ನು ಅಳಿಸಿ ಹಾಕುತ್ತದೆ. ಡೇಟಾ ಇವುಗಳನ್ನೂ ಒಳಗೊಂಡಿರಬಹುದು:\n\n"<li>"ನಿಮ್ಮ /e/ ಖಾತೆ"</li>\n<li>"ಸಿಸ್ಟಂ ಮತ್ತು ಅಪ್ಲಿಕೇಶನ್ ಡೇಟಾ ಹಾಗೂ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</li>\n<li>"ಡೌನ್‌ಲೋಡ್ ಮಾಡಲಾದ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"ನೀವು ಪ್ರಸ್ತುತ ಕೆಳಗಿನ ಖಾತೆಗಳಿಗೆ ಸೈನ್ ಇನ್ ಆಗಿರುವಿರಿ:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"ಈ ಸಾಧನದಲ್ಲಿ ಪ್ರಸ್ತುತ ಇತರ ಬಳಕೆದಾರರಿದ್ದಾರೆ.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"ಸಂಗೀತ"</li>\n<li>"ಫೋಟೋಗಳು"</li>\n<li>"ಇತರ ಬಳಕೆದಾರರ ಡೇಟಾ"</li></string>
