--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -1249,8 +1249,8 @@
     <string name="reset_network_complete_toast" msgid="787829973559541880">"Tīklu iestatījumi ir atiestatīti."</string>
     <string name="device_reset_title" msgid="2384019005638768076">"Atiestatīt ierīci"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Rūpnīcas datu atiest."</string>
-    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Tādējādi tiks izdzēsti visi planšetdatora "<b>"iekšējā atmiņā"</b>" esošie dati, tostarp:\n\n"<li>"Google konta dati;"</li>\n<li>"sistēmas un lietotņu dati un iestatījumi;"</li>\n<li>"lejupielādētās lietotnes."</li></string>
-    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Tiks dzēsti visi tālruņa "<b>"iekšējā atmiņā"</b>" esošie dati, tostarp:\n\n"<li>"Google konta dati;"</li>\n<li>"sistēmas un lietotņu dati un iestatījumi;"</li>\n<li>"lejupielādētās lietotnes."</li></string>
+    <string name="master_clear_desc" product="tablet" msgid="9146059417023157222">"Tādējādi tiks izdzēsti visi planšetdatora "<b>"iekšējā atmiņā"</b>" esošie dati, tostarp:\n\n"<li>"/e/ konta dati;"</li>\n<li>"sistēmas un lietotņu dati un iestatījumi;"</li>\n<li>"lejupielādētās lietotnes."</li></string>
+    <string name="master_clear_desc" product="default" msgid="4800386183314202571">"Tiks dzēsti visi tālruņa "<b>"iekšējā atmiņā"</b>" esošie dati, tostarp:\n\n"<li>"/e/ konta dati;"</li>\n<li>"sistēmas un lietotņu dati un iestatījumi;"</li>\n<li>"lejupielādētās lietotnes."</li></string>
     <string name="master_clear_accounts" product="default" msgid="6412857499147999073">\n\n"Pašlaik esat pierakstījies šādos kontos:\n"</string>
     <string name="master_clear_other_users_present" product="default" msgid="5161423070702470742">\n\n"Šo ierīci izmanto vēl citi lietotāji.\n"</string>
     <string name="master_clear_desc_also_erases_external" msgid="1903185203791274237"><li>"Mūzika"</li>\n<li>"Fotoattēli"</li>\n<li>"Citi lietotāja dati"</li></string>
